# particleuniverse

./: CMakeLists.txt  README.md
Editor/: CMakeLists.txt
Editor/include/: ParticleUniverseEditor.h  ParticleUniversePropertyWindow.h
Editor/language/mk/: mk_MK_internat.po  pued.cfg
Editor/language/nl/: nl_NL_internat.po  nl_NL_system.po  pued.cfg
Editor/language/ru/: pued.cfg
Editor/language/zh_CN/: pued.cfg  zh_CN_internat.po  zh_CN_system.po
Editor/manual/script/: AffectorAlign.html  AffectorCollisionAvoidance.html  AffectorColour.html  AffectorFlockCentering.html  AffectorForceField.html  AffectorGeometryRotator.html  AffectorGravity.html  AffectorJet.html  AffectorLine.html  AffectorLinearForce.html  AffectorParticleFollower.html  AffectorRandomiser.html  AffectorScale.html  AffectorScaleVelocity.html  AffectorSineForce.html  AffectorTextureAnimator.html  AffectorTextureRotator.html  AffectorVelocityMatching.html  AffectorVortex.html  AtlasImageTool.html  BehaviourSlave.html  ClassDiagram.html  ColliderBox.html  ColliderInterParticle.html  ColliderPlane.html  ColliderSphere.html  CreateAParticleSystem.html  Debug.html  EmitterBox.html  EmitterCircle.html  EmitterLine.html  EmitterMeshSurface.html  EmitterPoint.html  EmitterPosition.html  EmitterSlave.html  EmitterSphereSurface.html  EmitterVertex.html  EventHandlerDoAffector.html  EventHandlerDoEnableComponent.html  EventHandlerDoExpire.html  (+49 more)
Editor/manual/script/files/css/: style.css
Editor/media/core/materials/: pu_grid_sm20.hlsl  pued.material
Editor/src/: ParticleUniverseAffectorPropertyWindow.cpp  ParticleUniverseAnimationWindow.cpp  ParticleUniverseConfigDialog.cpp  ParticleUniverseConfigFile.cpp  ParticleUniverseContextMenu.cpp  ParticleUniverseControlPointColourControl.cpp  ParticleUniverseEditComponent.cpp  ParticleUniverseEditTab.cpp  ParticleUniverseEditor.cpp  ParticleUniverseFileDropTarget.cpp  ParticleUniverseMaterialListBox.cpp  ParticleUniverseMaterialSelector.cpp  ParticleUniverseMaterialTab.cpp  ParticleUniverseMeshSelector.cpp  ParticleUniverseObserverPropertyWindow.cpp  ParticleUniversePropertyWindow.cpp  ParticleUniverseSystemTreeControl.cpp  ParticleUniverseUtils.cpp
Editor/src/RendererPropertyWindow/: BillboardRendererPropertyWindow.cpp
Editor/src/ogre/: control.cpp  rendersystem.cpp
Editor/src/propgrid/: advprops.cpp  propgrid.cpp  props.cpp
Plugins/ParticleUniverse/include/: ParticleUniverseSystem.h
Plugins/ParticleUniverse/src/: ParticleUniverseAtlasImage.cpp
Plugins/ParticleUniverse/src/ParticleEmitters/: ParticleUniverseVertexEmitter.cpp
Samples/ParticleUniverseDemo/src/: BaseApplication.cpp
Tools/AtlasImageTool/src/: AtlasImageTool.cpp
