# --------------------------------------------------------------------
# Include paths
# --------------------------------------------------------------------
INCLUDE_DIRECTORIES (
                        ${PROJECT_SOURCE_DIR}/Editor/include
                        ${PROJECT_SOURCE_DIR}/Plugins/ParticleUniverse/include
                        ${GTK2_INCLUDE_DIRS}
                    )

# -----------------------------------------------------------------------------
# Particle Editor
# -----------------------------------------------------------------------------
ADD_EXECUTABLE (puEeditor
                     src/ParticleUniverseControlPointControl.cpp
                     src/ParticleUniverseMaterialListBox.cpp
                     src/ParticleUniverseOgreControlComponent.cpp
                     src/ParticleUniverseRecorder.cpp
                     src/ParticleUniverseMediaTypeComboBox.cpp
                     src/ParticleUniverseContextMenu.cpp
                     src/ParticleUniverseEditCanvas.cpp
                     src/ParticleUniverseConfigFile.cpp
                     src/AffectorPropertyWindow
                     src/AffectorPropertyWindow/ScaleAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/JetAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/ColourAffectorDialog.cpp
                     src/AffectorPropertyWindow/CollisionAvoidanceAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/GravityAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/AlignAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/FlockCenteringAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/BoxColliderPropertyWindow.cpp
                     src/AffectorPropertyWindow/RandomiserPropertyWindow.cpp
                     src/AffectorPropertyWindow/LineAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/SineForceAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/PathFollowerPropertyWindow.cpp
                     src/AffectorPropertyWindow/SphereColliderPropertyWindow.cpp
                     src/AffectorPropertyWindow/ColourAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/GeometryRotatorPropertyWindow.cpp
                     src/AffectorPropertyWindow/VortexAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/TextureRotatorPropertyWindow.cpp
                     src/AffectorPropertyWindow/PlaneColliderPropertyWindow.cpp
                     src/AffectorPropertyWindow/VelocityMatchingAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/LinearForceAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/ParticleFollowerPropertyWindow.cpp
                     src/AffectorPropertyWindow/InterParticleColliderPropertyWindow.cpp
                     src/AffectorPropertyWindow/ScaleVelocityAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/ForceFieldAffectorPropertyWindow.cpp
                     src/AffectorPropertyWindow/TextureAnimatorPropertyWindow.cpp
                     src/ParticleUniverseControlPointDialog.cpp
                     src/ParticleUniverseMainToolbar.cpp
                     src/ParticleUniverseSystemTreeControl.cpp
                     src/RendererPropertyWindow
                     src/RendererPropertyWindow/RibbonTrailRendererPropertyWindow.cpp
                     src/RendererPropertyWindow/BillboardRendererPropertyWindow.cpp
                     src/RendererPropertyWindow/BoxRendererPropertyWindow.cpp
                     src/RendererPropertyWindow/LightRendererPropertyWindow.cpp
                     src/RendererPropertyWindow/EntityRendererPropertyWindow.cpp
                     src/RendererPropertyWindow/SphereRendererPropertyWindow.cpp
                     src/RendererPropertyWindow/BeamRendererPropertyWindow.cpp
                     src/ParticleUniverseSystemPropertyWindow.cpp
                     src/ParticleUniverseTextControl.cpp
                     src/ParticleUniverseGizmoManager.cpp
                     src/ParticleUniverseEditor.cpp
                     src/ParticleUniverseGizmoScaling.cpp
                     src/ParticleUniverseGizmoMovement.cpp
                     src/EventHandlerPropertyWindow
                     src/EventHandlerPropertyWindow/DoEnableComponentEventHandlerPropertyWindow.cpp
                     src/EventHandlerPropertyWindow/DoExpireEventHandlerPropertyWindow.cpp
                     src/EventHandlerPropertyWindow/DoPlacementParticleEventHandlerPropertyWindow.cpp
                     src/EventHandlerPropertyWindow/DoStopSystemEventHandlerPropertyWindow.cpp
                     src/EventHandlerPropertyWindow/DoAffectorEventHandlerPropertyWindow.cpp
                     src/EventHandlerPropertyWindow/DoScaleEventHandlerPropertyWindow.cpp
                     src/EventHandlerPropertyWindow/DoFreezeEventHandlerPropertyWindow.cpp
                     src/ParticleUniverseMeshSelector.cpp
                     src/ParticleUniverseEditTab.cpp
                     src/ParticleUniverseEditorPCH.cpp
                     src/wx
                     src/ParticleUniverseAnimationWindow.cpp
                     src/ParticleUniverseUtils.cpp
                     src/BehaviourPropertyWindow
                     src/BehaviourPropertyWindow/SlaveBehaviourPropertyWindow.cpp
                     src/ParticleUniverseControlPointColourControl.cpp
                     src/ParticleUniverseEditToolbar.cpp
                     src/EmitterPropertyWindow
                     src/EmitterPropertyWindow/MeshSurfaceEmitterPropertyWindow.cpp
                     src/EmitterPropertyWindow/CircleEmitterPropertyWindow.cpp
                     src/EmitterPropertyWindow/LineEmitterPropertyWindow.cpp
                     src/EmitterPropertyWindow/SlaveEmitterPropertyWindow.cpp
                     src/EmitterPropertyWindow/BoxEmitterPropertyWindow.cpp
                     src/EmitterPropertyWindow/VertexEmitterPropertyWindow.cpp
                     src/EmitterPropertyWindow/SphereSurfaceEmitterPropertyWindow.cpp
                     src/EmitterPropertyWindow/PositionEmitterPropertyWindow.cpp
                     src/EmitterPropertyWindow/PointEmitterPropertyWindow.cpp
                     src/ParticleUniverseObserverPropertyWindow.cpp
                     src/ParticleUniverseSpinCtrl.cpp
                     src/ParticleUniverseControlPoint.cpp
                     src/ExternPropertyWindow
                     src/ExternPropertyWindow/BoxColliderExternPropertyWindow.cpp
                     src/ExternPropertyWindow/VortexExternPropertyWindow.cpp
                     src/ExternPropertyWindow/PhysXFluidExternPropertyWindow.cpp
                     src/ExternPropertyWindow/PhysXActorExternPropertyWindow.cpp
                     src/ExternPropertyWindow/SphereColliderExternPropertyWindow.cpp
                     src/ExternPropertyWindow/GravityExternPropertyWindow.cpp
                     src/ObserverPropertyWindow
                     src/ObserverPropertyWindow/OnTimeObserverPropertyWindow.cpp
                     src/ObserverPropertyWindow/OnClearObserverPropertyWindow.cpp
                     src/ObserverPropertyWindow/OnVelocityObserverPropertyWindow.cpp
                     src/ObserverPropertyWindow/OnCollisionObserverPropertyWindow.cpp
                     src/ObserverPropertyWindow/OnEventFlagObserverPropertyWindow.cpp
                     src/ObserverPropertyWindow/OnQuotaObserverPropertyWindow.cpp
                     src/ObserverPropertyWindow/OnCountObserverPropertyWindow.cpp
                     src/ObserverPropertyWindow/OnExpireObserverPropertyWindow.cpp
                     src/ObserverPropertyWindow/OnPositionObserverPropertyWindow.cpp
                     src/ObserverPropertyWindow/OnEmissionObserverPropertyWindow.cpp
                     src/ObserverPropertyWindow/OnRandomObserverPropertyWindow.cpp
                     src/ParticleUniverseGizmoOrthoCamera.cpp
                     src/ParticleUniverseConnector.cpp
                     src/ParticleUniverseMaterialSelector.cpp
                     src/propgrid
                     src/propgrid/propgrid.cpp
                     src/propgrid/advprops.cpp
                     src/propgrid/props.cpp
                     src/propgrid/odcombo.cpp
                     src/propgrid/manager.cpp
                     src/propgrid/extras.cpp
                     src/ParticleUniverseBehaviourPropertyWindow.cpp
                     src/ParticleUniverseTechniquePropertyWindow.cpp
                     src/ParticleUniverseSliderDialog.cpp
                     src/ParticleUniverseEditComponent.cpp
                     src/ogre
                     src/ogre/utils.cpp
                     src/ogre/control.cpp
                     src/ogre/rendersystem.cpp
                     src/ogre/resources.cpp
                     src/ogre/app.cpp
                     src/ParticleUniverseEventHandlerPropertyWindow.cpp
                     src/ParticleUniverseEditorListener.cpp
                     src/ParticleUniverseAffectorPropertyWindow.cpp
                     src/ParticleUniverseFileDropTarget.cpp
                     src/ParticleUniverseRendererPropertyWindow.cpp
                     src/ParticleUniverseGizmo.cpp
                     src/ParticleUniverseExternPropertyWindow.cpp
                     src/ParticleUniversePropertyWindow.cpp
                     src/ParticleUniverseEmitterPropertyWindow.cpp
                     src/ParticleUniverseConfigDialog.cpp
                     src/ParticleUniverseMaterialTab.cpp
                     src/ParticleUniverseGizmoRotation.cpp
                  )
             
# -----------------------------------------------------------------------------
#       Dolinkowane biblioteki
# -----------------------------------------------------------------------------
TARGET_LINK_LIBRARIES (puEeditor
                          Plugin_ParticleUniverse
                          ${wxWidgets_LIBRARIES}
                          ${OGRE_Overlay_LIBRARIES}
                          ${OGRE_LIBRARIES}
                          ${GTK2_LIBRARIES}
                      )
